--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ header {
   background-size: cover;
   background-repeat: no-repeat; 
 }
+header h1 {
+  font-size:1em;
+  padding:0;
+  margin:0;
+}
 
 header>div {
   background: rgba(255, 255, 255, 0.6);
