--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@
   --color-main-prozori: rgba(18, 55, 92, 40%);
   --color-pozadine:rgb(229, 231, 240);
   background-color: rgba(18, 55, 92, 5%);
+  background-color: var(--color-pozadine);
   
 }
-.row1,.row2 {
-  display:none;
-}
+
 
 body {
   margin: 0 auto;
@@ -26,7 +25,6 @@ main {
   padding: 0;
   font-family: Ubuntu, sans-serif;
   font-size: 14px;
-  max-width: 1200px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -203,7 +201,7 @@ a.a-action-button {
 .video-holder {
   grid-column: col-start / -1;
   grid-row: 1;
-  padding: 2% 0;
+  padding: 3% 0;
   
 }
 
@@ -460,13 +458,17 @@ span.special {
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr);
   padding-bottom: 3%;
-  background-color:white;
+  background-color: var(--color-pozadine);
 }
 
 .wrapper-reserve form {
   grid-column: col-start / -1;
   grid-row: 1;
   font-size: 16px;
+}
+
+.wrapper-reserve .underline_box{
+  border:none;
 }
 
 #status {
@@ -903,7 +905,7 @@ header{
 .content-4 {
   justify-content: flex-start;
   padding: 9% 0;
-  padding-top: 0;
+  padding-top: 2%;
   margin: 0;
 } 
 
@@ -978,23 +980,9 @@ header{
 
 @media only screen and (min-width: 992px) {
  
-.wrapper-index,
-.wrapper-gallery,
-.wrapper-our,
-.wrapper-prices,
-.wrapper-reserve,
-.wrapper-contact {
-  border-top: none;
-  border-bottom: none;
-  border: 3px solid var(--color-debele-linije);
-  border-top: none;
- 
-}
 
-header {
-  border:3px solid var(--color-debele-linije);
-  border-bottom: none;
-}
+
+
 
 
 /*>992 header nav i footer*/
@@ -1003,8 +991,8 @@ header {
 
 
 .navigation{
-  border: 3px solid var(--color-debele-linije);
-  
+  border-top: 3px solid var(--color-debele-linije);
+  border-bottom: 3px solid var(--color-debele-linije);
 }
 
 .footer-2 a img,
@@ -1024,10 +1012,15 @@ padding: 0.25vw;
 .iframe-container object, 
 .iframe-container embed { 
   position: absolute; 
-  top: 4.5%; 
-  left: 4.5%; 
-  width: 91%; 
-  height: 91%; 
+  top: 3%; 
+  left: 3%; 
+  width: 94%; 
+  height: 94%; 
+}
+
+.wrapper-index {
+  padding-right:3%;
+  padding-left:3%;
 }
 
 .content-3,
@@ -1038,7 +1031,8 @@ padding: 0.25vw;
 /*>992 our*/
 
 .wrapper-our {
-  padding-top: 3%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 .wrapper-our .underline_box{
@@ -1140,71 +1134,39 @@ padding: 0.25vw;
 }
 
 
-@media only screen and (min-width: 1500px) {
+@media only screen and (min-width: 1200px) {
 
 
-@keyframes move {
-  0%,100% { top: 0; }
-  50% { top: calc(100vh - ((100vw - 1200px)/6)); }
-/*  to { left: 250px; } */
+.iframe-container iframe, 
+.iframe-container object, 
+.iframe-container embed { 
+  position: absolute; 
+  top: 4.5%; 
+  left: 4.5%; 
+  width: 91%; 
+  height: 91%; 
+}
+  .wrapper-index,
+  .wrapper-our,
+  .wrapper-prices,
+  .wrapper-reserve,
+  .wrapper-contact {
+    border:none;
+    max-width: 1200px;
+    margin: 0 auto;
+    background: var(--color-pozadine);
+  }
+
+.flickity-prev-next-button.previous {
+    display: none;
 }
 
-@keyframes move2 {
-  0%,100% { bottom: 0; }
-  50% { bottom: calc(100vh - ((100vw - 1200px)/6)); }
-/*  to { left: 250px; } */
+.flickity-prev-next-button.next {
+  display:none;
 }
-
-.row1,
-.row2 {
-  display:inline-block;
-  position: sticky;
-  top:0;
-  height: calc(100vh);
-  width: calc((100vw - 1200px)/6);
   
 }
 
 
-img.bike1 {
-  display: block;
-  position: absolute;
-  width: calc((100vw - 1200px)/6);
-  animation-name: move;
-  animation-duration: 10s;
-  animation-iteration-count: infinite;
-}
-
-img.bike2 {
-  display: block;
-  position: absolute;
-  width: calc((100vw - 1200px)/6);
-  animation-name: move2;
-  animation-duration: 10s;
-  animation-iteration-count: infinite;
-}
-
-body {
-  
-  display: grid;
-  grid-template-columns: 1fr 1200px 1fr;
-}
-.row1 {
-  grid-column: 1;
-  justify-self: center;
-  border-right: 4px dashed var(--color-debele-linije);
-
-}
-main{
-  grid-column: 2;
-  width:1200px;
-}
-.row2 {
-  grid-column: 3;
-  justify-self: center;
-  border-left: 4px dashed var(--color-debele-linije);
-}
-
-}
 
 
