--- a/style.css
+++ b/style.css
@@ -1,30 +1,21 @@
 :root {
-  --color-pozadine: rgba(201, 93, 21, 15%);
-  --color-nav-obrub:rgba(201, 93, 21,40%);
-  --color-debele-linije: rgb(201, 93, 21);
-  --color-main-prozori: rgba(201, 93, 21, 40%);
-
   --color-debele-linije:rgb(18, 55, 92);
   --color-pozadine: rgba(18, 55, 92, 15%);
   --color-nav-obrub: rgba(18, 55, 92, 40%);
   --color-main-prozori: rgba(18, 55, 92, 40%);
   --color-pozadine:rgb(229, 231, 240);
-  background-color: rgba(18, 55, 92, 5%);
   background-color: var(--color-pozadine);
-  
 }
-
 
 body {
   margin: 0 auto;
   padding: 0;
-}
-
-main {
-  margin: 0 auto;
-  padding: 0;
   font-family: Ubuntu, sans-serif;
   font-size: 14px;
+}
+
+.big_screen {
+  display:none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -44,6 +35,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat; 
 }
+
 header h1 {
   font-size:1em;
   padding:0;
@@ -84,7 +76,6 @@ header>div {
   border-radius: 4px;
   background: var(--color-pozadine);
 }
-
 
 .wrapper-footer {
   padding-top: 5%;
@@ -661,7 +652,7 @@ input[type=number]::-webkit-inner-spin-button {
 
 /* >600 header nav i footer*/
 
-main {
+body {
   font-size: 20px;
 }
 
@@ -983,8 +974,6 @@ header{
 
 
 
-
-
 /*>992 header nav i footer*/
 
 
@@ -1136,6 +1125,14 @@ padding: 0.25vw;
 
 @media only screen and (min-width: 1200px) {
 
+  
+  .small_screen {
+    display:none;
+  }
+
+  .big_screen {
+    display: inline-block;
+  }
 
 .iframe-container iframe, 
 .iframe-container object, 
